feat(ReadingsService): pass devices info and improve pin mapping endpoint
